# lynx

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: bookcrossing.ipynb  kddcup2012.ipynb  movielens.ipynb  netflix.ipynb  tutorial.ipynb
experiments/: README.md  fastfm_exp.py  libfm_bs_exp.py  libfm_dense_exp.py
experiments/bookcrossing/book_user_interactions/: data_loader.py  fastfm.py  libfm_dense.py
experiments/bookcrossing/user_book_interactions/: data_loader.py  libfm_bs.py  libfm_dense.py
experiments/kddcup2012track1/user_item_friends/: data_loader.py  libfm_dense.py
experiments/kddcup2012track1/user_item_keyword/: data_loader.py  libfm_bs.py  libfm_dense.py
experiments/kddcup2012track1/user_item_userprofile/: data_loader.py
experiments/movielens/: fastfm_rmse_timing.py  libfm_bs_rmse_timing.py  libfm_dense_rmse_timing.py
experiments/movielens/movie_user/: data_loader.py  fastfm.py  libfm_bs.py  libfm_dense.py
experiments/movielens/movie_user_interactions/: data_loader.py  fastfm.py  libfm_dense.py
experiments/movielens/user_movie_interactions/: data_loader.py  libfm_bs.py
experiments/netflixprize/movie_user_interactions/: data_loader.py  libfm_dense.py
experiments/netflixprize/user_movie/: data_loader.py  libfm_bs.py
experiments/netflixprize/user_movie_day/: data_loader.py
lynx/: __init__.py
lynx/datasets/: kddcup2012.py  movielens.py  netflixprize.py
lynx/libfm/: __init__.py  als.py  mcmc.py  sgd.py  sgda.py  tasks.py
lynx/table/: __init__.py  table.py  utils.py
lynx/write/: __init__.py  svmlight.py
(+30 files in other folders)
